# upset-altair

./: .readthedocs.yaml  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  req.txt  todo.org
.github/workflows/: ci.yml
altair_upset/: __init__.py  config.py  original_function.py  preprocessing.py  upset.py
docs/: build.sh  conf.py  index.rst  installation.md  requirements.txt  sg_execution_times.rst
docs/examples/: README.rst  advanced_features.rst  basic_upset.rst  custom_tooltips.rst  gene_sets.rst  index.rst  polars_example.rst
examples/: advanced_features.py  basic_upset.py  gene_sets_basic.html  gene_sets_focused.html  social_media_upset.html
tests/: conftest.py  test_covid_mutations.py  test_covid_symptoms.py
tests/__snapshots__/: test_covid_symptoms.ambr
tests/__snapshots__/test_covid_mutations/: test_covid_mutations[vega_spec].json  test_covid_mutations_subset[vega_spec].json
tests/__snapshots__/test_covid_symptoms/: test_upset_by_degree[vega_spec].json  test_upset_by_degree_custom[vega_spec].json  test_upset_by_frequency[vega_spec].json
tests/snapshots/: covid_symptoms_by_degree.vl.json  covid_symptoms_by_degree_custom.vl.json  covid_symptoms_by_frequency.vl.json
