[project]
name = "altair-upset"
dynamic = ["version"]
description = "Create UpSet plots using Altair"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "altair>=4.0.0,<5.0.0",
    "pandas>=1.0.0",
]

[dependency-groups]
dev = [
    "marimo",
    "ipykernel",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "syrupy>=4.0.0",
    "vl-convert-python>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
package = true 
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
