[project]
name = "altair-upset"
dynamic = ["version"]
description = "Create UpSet plots using Altair"
readme = "README.md"
requires-python = ">=3.8.1,<=3.10.2"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "altair>=5.0.0",
    "pandas>=1.4.1",
]

[dependency-groups]
test = [
    "pytest",
    "syrupy>=4.0.0",
    "vl-convert-python>=1.0.0",
    "jsonschema>=3.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
package = true 
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "altair_upset/__init__.py"